--- a/db/json2/humanrightsdeclaration/templates/signatory.hbs
+++ b/db/json2/humanrightsdeclaration/templates/signatory.hbs
@@ -1,1 +1,1 @@
-{{{primaryResponse.hits.hits.[0]._source.rendered.humanrightsdeclaration_full}}}
+{{{data.primaryResponse.hits.hits.[0]._source.rendered.humanrightsdeclaration_full}}}
