--- a/db/json2/scvo/layouts/default.hbs
+++ b/db/json2/scvo/layouts/default.hbs
@@ -49,7 +49,7 @@
     <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
 </head>
-<body class="mdc-theme--site-bg {{#if request.url.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
+<body class="mdc-theme--site-bg {{#if request.params.path}}{{replace request.params.path '_' ' '}}{{else}}home{{/if}}">
     <scvo-site>
         <div class="mdc-typography mdc-theme--site-bg">
             <header class="mdc-toolbar mdc-toolbar--fixed mdc-theme--primary-light-bg">
