--- a/db/json2/digitalparticipation/templates/signatory.hbs
+++ b/db/json2/digitalparticipation/templates/signatory.hbs
@@ -1,1 +1,1 @@
-{{{primaryResponse.hits.hits.[0]._source.rendered.charter_full}}}
+{{{data.primaryResponse.hits.hits.[0]._source.rendered.charter_full}}}
