Got the human rights charter working

--- a/assets/css/digitalparticipation-styles.scss
+++ b/assets/css/digitalparticipation-styles.scss
@@ -13,7 +13,7 @@
 }
 @import url('//fonts.googleapis.com/css?family=Poppins:700');
 
-$spacing-unit: 1rem;
+$unit: 1rem;
 
 // Brand colours
 
@@ -142,7 +142,7 @@ body {
 }
 header.mdc-toolbar {
     background-color: transparent;
-    margin-bottom: $spacing-unit*2;
+    margin-bottom: $unit*2;
 }
 .mdc-temporary-drawer__header-content,
 main {
@@ -159,7 +159,7 @@ main {
     direction: ltr;
 }
 main {
-    padding-bottom: $spacing-unit;
+    padding-bottom: $unit;
 }
 a {
     text-decoration-skip: ink;
@@ -179,7 +179,7 @@ a {
     margin: 0 auto;
     overflow: auto;
     overflow: -webkit-paged-x;
-    padding: $spacing-unit/2 0;
+    padding: $unit/2 0;
 }
 .mdc-toolbar {
     box-shadow: none;
@@ -188,7 +188,7 @@ a {
     }
     .mdc-toolbar__title {
         margin: 0;
-        padding: $spacing-unit 0 $spacing-unit;
+        padding: $unit 0 $unit;
         position: relative;
         .brand-logo {
             display: block;
@@ -330,10 +330,10 @@ main {
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$brand-primary', endColorstr='$brand-charter',GradientType=0 );
         .cta {
             .cta-left {
-                margin-right: $spacing-unit/2;
+                margin-right: $unit/2;
             }
             .cta-right {
-                margin-left: $spacing-unit/2;
+                margin-left: $unit/2;
             }
         }
     }
@@ -442,14 +442,14 @@ main {
         line-height: 2rem;
         height: 3rem;
         background-color: white;
-        padding: 0 $spacing-unit/2;
+        padding: 0 $unit/2;
         border: $brand-border-width solid $brand-typography;
         border-radius: 0.15rem;
         max-width: 100%;
         letter-spacing: 0;
     }
     .sector .mdc-select {
-        margin-right: $spacing-unit/2;
+        margin-right: $unit/2;
     }
     .mdc-textfield__input:focus,
     .mdc-select:focus {
@@ -855,21 +855,21 @@ hr {
 
 .signatories main {
     form {
-        margin-bottom: $spacing-unit*2;
+        margin-bottom: $unit*2;
         .mdc-textfield {
             position: relative;
-            margin-right: $spacing-unit/2;
+            margin-right: $unit/2;
             .mdc-textfield__input {
                 margin-right: 1rem;
                 box-sizing: border-box;
-                padding: 0 $spacing-unit*2.5 0 $spacing-unit/2;
+                padding: 0 $unit*2.5 0 $unit/2;
                 width: 100%;
             }
             .search-button-large {
                 padding: 1px 0 0;
                 position: absolute;
-                top: $spacing-unit/2;
-                right: $spacing-unit/2;
+                top: $unit/2;
+                right: $unit/2;
                 .fa-search {
                     color: $brand-typography;
                 }
@@ -893,17 +893,17 @@ hr {
     }
     h4.sort {
         text-align: right;
-        margin-right: $spacing-unit/2;
+        margin-right: $unit/2;
     }
     .digital-charter-signatory {
         h3 {
-            margin: $spacing-unit 0;
+            margin: $unit 0;
         }
     }
     .signatory {
         background: white;
         // margin: 0 -0.75rem;
-        padding: $spacing-unit;
+        padding: $unit;
         vertical-align: middle;
         a {
             display: inline-block;
@@ -970,7 +970,7 @@ hr {
 .pagination {
     text-align: center;
     display: block !important;
-    padding-top: $spacing-unit !important;
+    padding-top: $unit !important;
     margin-top: 3rem;
     list-style-type: none;
     li a,
@@ -990,16 +990,16 @@ hr {
     li {
         display: inline-block;
         padding: 0 !important;
-        height: $spacing-unit*2;
-        width: $spacing-unit*2;
+        height: $unit*2;
+        width: $unit*2;
         border-radius: 50%;
-        margin: 0 $spacing-unit/5;
+        margin: 0 $unit/5;
         vertical-align: bottom;
         a {
             font-size: 1.3rem;
-            line-height: $spacing-unit*2;
-            height: $spacing-unit*2;
-            width: $spacing-unit*2;
+            line-height: $unit*2;
+            height: $unit*2;
+            width: $unit*2;
             color: $brand-typography;
             padding: 0;
             margin: 0;
@@ -1051,13 +1051,13 @@ footer {
         position: relative;
     }
     .footer-main {
-        border-top: $spacing-unit*(0.6) solid white;
-        padding: $spacing-unit 0 $spacing-unit*2;
+        border-top: $unit*(0.6) solid white;
+        padding: $unit 0 $unit*2;
         background-image: linear-gradient(160deg, $brand-typography, $brand-typography 60%, $scvo-background 110%, $scvo-background);
     }
     h3 {
-        padding-bottom: $spacing-unit/2;
-        border-bottom: $spacing-unit/5 solid white;
+        padding-bottom: $unit/2;
+        border-bottom: $unit/5 solid white;
         color: white;
     }
     a {
@@ -1091,7 +1091,7 @@ footer {
         font-size: 1.25rem;
     }
     .fa-ul {
-        margin: 0 0 0 $spacing-unit*2;
+        margin: 0 0 0 $unit*2;
         li a {
             text-decoration: none;
         }
@@ -1100,7 +1100,7 @@ footer {
         }
     }
     ul {
-        margin-bottom: $spacing-unit !important;
+        margin-bottom: $unit !important;
     }
     .mdc-layout-grid p {
         margin-bottom: 0;
@@ -1108,7 +1108,7 @@ footer {
     .mdc-list {
         padding: 0;
         .mdc-list-item {
-            height: $spacing-unit*1.5;
+            height: $unit*1.5;
             a {
                 text-decoration: none;
             }
@@ -1116,7 +1116,7 @@ footer {
     }
     .footer-copyright {
         background-color: $scvo-background;
-        padding-bottom: $spacing-unit/2;
+        padding-bottom: $unit/2;
         font-size: 1rem;
         p {
             font-size: 1rem;
@@ -1144,7 +1144,7 @@ footer {
     display: none;
     .mdc-temporary-drawer__header-content {
         direction: ltr;
-        padding: $spacing-unit;
+        padding: $unit;
     }
     .mdc-temporary-drawer__header:before {
         padding-top: 24%;
@@ -1154,7 +1154,7 @@ footer {
         .mdc-list {
             .mdc-list-item {
                 direction: ltr;
-                padding: 0 $spacing-unit;
+                padding: 0 $unit;
             }
             .mdc-list-item__start-detail {
                 display: none;
