--- a/db/json2/scvo/templates/main_search/search.hbs
+++ b/db/json2/scvo/templates/main_search/search.hbs
@@ -38,7 +38,7 @@
                         {{>highlight_result}}
                         {{/each ~}}
 
-                        {{> pagination}}
+                        {{> pagination paging=data.primaryResponse.pagination}}
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar">
                         {{#*inline "filter_checkbox" ~}}
