Updated pagination in templates

--- a/db/json2/scvo/templates/documents/evidence-library-document-search.hbs
+++ b/db/json2/scvo/templates/documents/evidence-library-document-search.hbs
@@ -35,7 +35,7 @@
                     {{{_source.rendered.scvo_list}}}
                     {{/each ~}}
 
-                    {{> pagination}}
+                    {{> pagination paging=data.primaryResponse.pagination}}
                 </div>
             </div>
         </div>
