--- a/db/json2/scvo/templates/events/event-digital-search.hbs
+++ b/db/json2/scvo/templates/events/event-digital-search.hbs
@@ -74,7 +74,7 @@
                     {{{_source.rendered.scvo_list}}}
                     {{/each ~}}
 
-                    {{> pagination}}
+                    {{> pagination paging=data.primaryResponse.pagination}}
                 </div>
             </div>
         </div>
