--- a/db/json2/scvo/templates/funding/funding-updates.hbs
+++ b/db/json2/scvo/templates/funding/funding-updates.hbs
@@ -42,6 +42,6 @@
                 {{/each ~}}
             </div>
         </div>
-        {{> pagination}}
+        {{> pagination paging=data.primaryResponse.pagination}}
     </div>
 </div>
