--- a/db/json2/scvo/templates/jobs/cjs-job-search.hbs
+++ b/db/json2/scvo/templates/jobs/cjs-job-search.hbs
@@ -45,7 +45,7 @@
                     {{{_source.rendered.scvo_list}}}
                     {{/each ~}}
 
-                    {{> pagination}}
+                    {{> pagination paging=data.primaryResponse.pagination}}
                     {{else}}
                     <div class="search-info mdc-elevation--z3">
                         No vacancies in the selected category. Please check back soon.
