--- a/db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
+++ b/db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
@@ -97,7 +97,7 @@
                     {{{_source.rendered.scvo_search_result}}}
                     {{/each ~}}
 
-                    {{> pagination}}
+                    {{> pagination paging=data.primaryResponse.pagination}}
                 </div>
             </div>
         </div>
