--- a/db/json2/scvo/templates/pages/page-blogs.hbs
+++ b/db/json2/scvo/templates/pages/page-blogs.hbs
@@ -29,7 +29,7 @@
                         {{{_source.rendered.scvo_list}}}
                         {{/each ~}}
                     </ul>
-                    {{> pagination}}
+                    {{> pagination paging=data.primaryResponse.pagination}}
                     {{else}}
                     <p>
                         No posts by this author could be loaded.
