--- a/db/json2/scvo/templates/trustees/trustee-search.hbs
+++ b/db/json2/scvo/templates/trustees/trustee-search.hbs
@@ -40,7 +40,7 @@
                     {{{_source.rendered.trustee_search_result}}}
                     {{/each ~}}
 
-                    {{> pagination}}
+                    {{> pagination paging=data.primaryResponse.pagination}}
                 </div>
             </div>
         </div>
