--- a/db/json2/digitalparticipation/templates/signatory-search.hbs
+++ b/db/json2/digitalparticipation/templates/signatory-search.hbs
@@ -65,5 +65,5 @@
         </div>
     </div>
 
-    {{> pagination paging=paging params=params}}
+    {{> pagination paging=data.primaryResponse.pagination}}
 </div>
