--- a/db/json2/scvo/templates/events/event-cjs-search.hbs
+++ b/db/json2/scvo/templates/events/event-cjs-search.hbs
@@ -71,7 +71,7 @@
                         {{{_source.rendered.scvo_list}}}
                         {{/each ~}}
 
-                        {{> pagination}}
+                        {{> pagination paging=data.primaryResponse.pagination}}
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar event-sidebar">
                         {{> sidebar_cjs}}
