--- a/db/json2/scvo/templates/grants/grant-charter-search.hbs
+++ b/db/json2/scvo/templates/grants/grant-charter-search.hbs
@@ -75,7 +75,7 @@
                         </div>
                     </div>
 
-                    {{> pagination}}
+                    {{> pagination paging=data.primaryResponse.pagination}}
                 </div>
             </div>
         </div>
