--- a/db/json2/scvo/templates/members/member-search.hbs
+++ b/db/json2/scvo/templates/members/member-search.hbs
@@ -64,7 +64,7 @@
                         {{/each ~}}
 
                         {{#ifAny params.query.q params.query.type ~}}
-                            {{> pagination}}
+                        {{> pagination paging=data.primaryResponse.pagination}}
                         {{/ifAny ~}}
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
