--- a/db/json2/scvo/templates/posts/post-category.hbs
+++ b/db/json2/scvo/templates/posts/post-category.hbs
@@ -33,7 +33,7 @@
                         {{{_source.rendered.scvo_list}}}
                         {{/each ~}}
                     </ul>
-                    {{> pagination}}
+                    {{> pagination paging=data.primaryResponse.pagination}}
                     {{else}}
                     <p>
                         No posts in this category could be loaded.
