--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -3040,10 +3040,15 @@ ul.breadcrumbs {
         margin: 0;
     }
 }
-.board-of-trustees .full .mdc-layout-grid img {
-    max-width: 64px;
-    height: auto;
-    border-radius: 50%;
+.board-of-trustees .full .mdc-layout-grid {
+    .mdc-layout-grid__inner {
+        margin-bottom: $unit/2;
+        img {
+            max-width: 64px;
+            height: auto;
+            border-radius: 50%;
+        }
+    }
 }
 
 .post-info {
@@ -3714,6 +3719,9 @@ footer {
         .featured-info-summary {
             margin-top: 0;
         }
+    }
+    .full .post-info .post-info-share {
+        margin-right: 0;
     }
     .events .related .photo-wee {
         max-width: 64px;
