--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2458,6 +2458,9 @@ table.membership-fees {
     .welfare-reform .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/welfare-reform-bg-1400x400.jpg');
     }
+    .ccrf .mdc-card__media {
+        background-image: url("https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/ccrf-card-640x280.jpg");
+    }
     .terrific-trustees .mdc-card__media {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/header-trustees.png');
     }
@@ -2468,11 +2471,10 @@ table.membership-fees {
         height: 230px;
     }
     .scottish-charity-awards .mdc-card__media {
-        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/header-charity-awards.png');
+        background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/SCA_Winners_2017.jpg');
     }
     .the-gathering .mdc-card__media {
-        background-size: 150%;
-        background-image: url("https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/THEGATHERING-23.02.17_0028.jpg");
+        background-image: url("https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/Gathering_2018.JPG");
     }
 }
 .grid-info.cjs-footer {
