Improved error handling and fixed some queries

--- a/db/json2/scvo/layouts/default.hbs
+++ b/db/json2/scvo/layouts/default.hbs
@@ -5,6 +5,19 @@
     <base href="/">
     <!--{section:head}-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!--
+
+        Powered by:
+        ███████╗ ██████╗██╗   ██╗ ██████╗ ██╗  ██████╗  ██████╗ ██╗   ██╗████████╗███████╗██████╗ 
+        ██╔════╝██╔════╝██║   ██║██╔═══██╗╚██╗ ██╔══██╗██╔═══██╗██║   ██║╚══██╔══╝██╔════╝██╔══██╗
+        ███████╗██║     ██║   ██║██║   ██║ ╚██╗██████╔╝██║   ██║██║   ██║   ██║   █████╗  ██████╔╝
+        ╚════██║██║     ╚██╗ ██╔╝██║   ██║ ██╔╝██╔══██╗██║   ██║██║   ██║   ██║   ██╔══╝  ██╔══██╗
+        ███████║╚██████╗ ╚████╔╝ ╚██████╔╝██╔╝ ██║  ██║╚██████╔╝╚██████╔╝   ██║   ███████╗██║  ██║
+        ╚══════╝ ╚═════╝  ╚═══╝   ╚═════╝ ╚═╝  ╚═╝  ╚═╝ ╚═════╝  ╚═════╝    ╚═╝   ╚══════╝╚═╝  ╚═╝
+
+    -->
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/apple-icon-72x72.png">
